--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ ext{
     ktxVersion = '1.0.1'
     constraintLayoutVersion = '1.1.3'
     retrofitVersion = '2.4.0'
+    moxyXVersion = '1.7.0'
 }
 
 dependencies {
@@ -40,6 +41,12 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation "com.google.android.material:material:1.0.0"
+
+    //Moxy
+    implementation "tech.schoolhelper:moxy-x:$moxyXVersion"
+    implementation "tech.schoolhelper:moxy-x-androidx:$moxyXVersion"
+    kapt "tech.schoolhelper:moxy-x-compiler:$moxyXVersion"
+
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
